# streamlit-monaco

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
.devcontainer/: devcontainer.json
examples/: code.py  markdown.py  requirements.txt  test.py
streamlit_monaco/: __init__.py  render.py  version.py
streamlit_monaco/core/: callback.py  frame.py
streamlit_monaco/frontend/: package-lock.json  package.json
streamlit_monaco/frontend/components/: ElementsApp.tsx  Monaco.tsx
streamlit_monaco/frontend/pages/: index.tsx
streamlit_monaco/modules/: __init__.py  callbacks.py  dashboard.py  editors.py  events.py  html.py  media.py  mui.py  nivo.py
