[metadata]
name = streamlit-monaco
version = attr: streamlit_monaco.__version__
description = React Components for Streamlit.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://share.streamlit.io/okld/streamlit-gallery/main?p=monaco
url = https://github.com/marcusschiesser/streamlit-monaco
author = marcusschiesser
license = MIT
license_files = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.9
setup_requires =
    setuptools >= 42
    wheel
install_requires =
    streamlit >= 1.20
