[metadata]
name = streamlit-monaco
version = attr: streamlit_monaco.__version__
description = Monaco Editor (Visual Studio Code) for Streamlit
home_page = https://vs-code.streamlit.app/
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcusschiesser/streamlit-monaco
author = marcusschiesser
license = MIT
license_files = LICENSE

[options]
packages = find:
include_package_data = true
python_requires = >= 3.9
setup_requires =
    setuptools >= 42
    wheel
install_requires =
    streamlit >= 1.20
